Cleaned Up Existing Header

--- a/src/app/dpr-toolbar/dpr-toolbar.component.html
+++ b/src/app/dpr-toolbar/dpr-toolbar.component.html
@@ -1,25 +1,12 @@
 <mat-toolbar>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-  >
-    <mat-icon>menu</mat-icon>
+  <button mat-icon-button>
+    <mat-icon>games</mat-icon>
   </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
-  <button
-    mat-icon-button
-    class="example-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
-  >
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon>share</mat-icon>
-  </button>
+  <span>Party 2 Strong?</span>
+  <span class="toolbar-spacer"></span>
+    <mat-icon
+        (click)="redirectToGithub()"
+        svgIcon="github-icon" 
+        aria-hidden="false" 
+        aria-label="Example thumbs up SVG icon"></mat-icon>
 </mat-toolbar>
