--- a/src/app/dprcalc/dprcalc.component.html
+++ b/src/app/dprcalc/dprcalc.component.html
@@ -1,18 +1,23 @@
-<div class="playerStats">
-    <h1>Player Stats</h1>
-    <div>
-        <mat-form-field appearance="legacy" class="attackBonusValue">
-            <mat-label>Attack Bonus</mat-label>
-            <input #attackBonus matInput placeholder="0">
-        </mat-form-field>
-        <mat-button-toggle-group #polarity="matButtonToggleGroup">
-            <mat-button-toggle value="+">
-                <mat-icon>add</mat-icon>
-            </mat-button-toggle>
-            <mat-button-toggle value="-">
-                <mat-icon>remove</mat-icon>
-            </mat-button-toggle>
-        </mat-button-toggle-group>
-        <div>Selected value: {{polarity.value}}{{attackBonus.value}}</div>
+<mat-grid-list cols="3" rowHeight="2:1">
+    <mat-grid-tile>
+        <div class="playerStats">
+        <h1>Player Stats</h1>
+        <div>
+            <mat-form-field appearance="legacy" class="attackBonusValue">
+                <mat-label>Attack Bonus</mat-label>
+                <input #attackBonus matInput placeholder="0">
+            </mat-form-field>
+            <mat-button-toggle-group #polarity="matButtonToggleGroup">
+                <mat-button-toggle value="+">
+                    <mat-icon>add</mat-icon>
+                </mat-button-toggle>
+                <mat-button-toggle value="-">
+                    <mat-icon>remove</mat-icon>
+                </mat-button-toggle>
+            </mat-button-toggle-group>
+            <div>Selected value: {{polarity.value}}{{attackBonus.value}}</div>
+        </div>
     </div>
-</div>
+</mat-grid-tile>
+    <mat-grid-tile></mat-grid-tile>
+</mat-grid-list>
