--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,7 @@
 @use '@angular/material' as mat;
+@import '~@angular/material/prebuilt-themes/purple-green.css';
+
 $my-palette: mat.$indigo-palette;
-
-@include mat.core();
-
-$my-primary: mat.define-palette(mat.$indigo-palette, 500);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-$my-theme: mat.define-light-theme((color: (primary: $my-primary,
-        accent: $my-accent,
-      )));
-
-@include mat.all-component-themes($my-theme);
 
 html,
 body {
