--- a/src/app/dprcalc/dprcalc.component.scss
+++ b/src/app/dprcalc/dprcalc.component.scss
@@ -1,10 +1,48 @@
+@use 'sass:map';
+@import '~@angular/material/theming';
+
+$app-primary: mat-palette($mat-pink);
+$app-accent: mat-palette($mat-blue-grey);
+$theme: mat-light-theme((color: (primary: $app-primary,
+                accent: $app-accent,
+            )));
+
+$color: mat-get-color-config($theme);
+
+$primary: map-get($color, primary);
+$accent: map-get($color, accent);
+
 .playerStats {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: top;
-    width: 33%;
+    width: 100%;
     height: 100%;
+    background-color: grey;
+        padding-top: 5%;
+}
+
+.enemyStats {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: top;
+    width: 100%;
+    height: 100%;
+    background-color: darkgrey;
+        padding-top: 5%;
+}
+
+.results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: top;
+    width: 100%;
+    height: 100%;
+    background-color: lightgrey;
+    padding-top: 5%;
 }
 
 .attackBonusValue {
