--- a/src/app/dprcalc/dprcalc.component.html
+++ b/src/app/dprcalc/dprcalc.component.html
@@ -5,16 +5,30 @@
             <div>
                 <mat-form-field appearance="legacy" class="attackBonusValue">
                     <mat-label>Attack Bonus</mat-label>
-                    <input matInput required [(ngModel)]="attackBonus" [value]="attackBonus" required>
+                    <input matInput required [(ngModel)]="attackBonus" [value]="attackBonus" (input)="recalculateValues()" required>
                 </mat-form-field>
                 <mat-button-toggle-group [(ngModel)]="polarity">
                     <mat-button-toggle [value]="1">
-                        <mat-icon>add</mat-icon>
+                        <mat-icon (click)="recalculateValues()">add</mat-icon>
                     </mat-button-toggle>
                     <mat-button-toggle [value]="-1">
-                        <mat-icon>remove</mat-icon>
+                        <mat-icon (click)="recalculateValues()">remove</mat-icon>
                     </mat-button-toggle>
                 </mat-button-toggle-group>
+                <div class="sectionHeader"><h4>Attack Damage</h4></div>
+                <mat-form-field appearance="legacy" class="attackDamage">
+                    <mat-label>Quantity</mat-label>
+                    <input matInput required [(ngModel)]="attackDiceQuantity" [value]="attackDiceQuantity" (input)="recalculateValues()"
+                        required>
+                </mat-form-field>
+                <mat-form-field appearance="fill" class="attackDamage">
+                    <mat-label>Die</mat-label>
+                    <mat-select [(ngModel)]="attackDamage">
+                        <mat-option *ngFor="let die of dice" [value]="die.substring(1)">
+                            {{die}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
             </div>
         </div>
     </mat-grid-tile>
@@ -24,7 +38,7 @@
             <div>
                 <mat-form-field appearance="legacy" class="dprValue">
                     <mat-label>Armor Class</mat-label>
-                    <input matInput required [(ngModel)]="enemyArmorClass" [value]="enemyArmorClass" required>
+                    <input matInput required [(ngModel)]="enemyArmorClass" [value]="enemyArmorClass" (input)="recalculateValues()" required>
                 </mat-form-field>
             </div>
         </div>
@@ -33,9 +47,9 @@
         <div class="results">
             <mat-card>
                 <mat-card-title>Damage Per Round</mat-card-title>
-                <mat-card-subtitle>Chance to hit: {{chanceToHit}}</mat-card-subtitle>
+                <mat-card-subtitle>Chance to hit: {{chanceToHit}}%</mat-card-subtitle>
                 <mat-card-actions>
-                    <p class="mat-primary">DAMAGE GOES HERE</p>
+                    <p class="mat-primary">{{averageDamagePerRound}}</p>
                 </mat-card-actions>
             </mat-card>
         </div>
