--- a/src/app/dprcalc/dprcalc.component.scss
+++ b/src/app/dprcalc/dprcalc.component.scss
@@ -20,7 +20,7 @@ $accent: map-get($color, accent);
     width: 100%;
     height: 100%;
     background-color: grey;
-        padding-top: 5%;
+    padding: 5%
 }
 
 .enemyStats {
@@ -31,7 +31,7 @@ $accent: map-get($color, accent);
     width: 100%;
     height: 100%;
     background-color: darkgrey;
-        padding-top: 5%;
+    padding: 5%
 }
 
 .results {
@@ -42,7 +42,7 @@ $accent: map-get($color, accent);
     width: 100%;
     height: 100%;
     background-color: lightgrey;
-    padding-top: 5%;
+    padding: 5%
 }
 
 .attackBonusValue {
@@ -52,4 +52,14 @@ $accent: map-get($color, accent);
 .grid-layout-custom {
     width: 50vw;
     height: 50vh;
+}
+
+.attackDamage {
+    width: 40%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.sectionHeader {
+    justify-content: center;
 }
