--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-dpr-toolbar></app-dpr-toolbar>
-<app-dprcalc></app-dprcalc>
+<mat-sidenav-container class="body-wrapper">
+    <app-dpr-toolbar></app-dpr-toolbar>
+    <app-dprcalc></app-dprcalc>
+</mat-sidenav-container>
