--- a/src/app/dprcalc/dprcalc.component.html
+++ b/src/app/dprcalc/dprcalc.component.html
@@ -1,7 +1,7 @@
 <mat-grid-list cols="3" rowHeight="100%">
     <mat-grid-tile id="left-sidebar">
         <div class="playerStats">
-            <h1>Player Stats</h1>
+            <h1 class="sectionHeader">Player Stats</h1>
             <div>
                 <mat-form-field appearance="legacy" class="attackBonusValue">
                     <mat-label>Attack Bonus</mat-label>
@@ -15,9 +15,8 @@
                         <mat-icon (click)="recalculateValues()">remove</mat-icon>
                     </mat-button-toggle>
                 </mat-button-toggle-group>
-                <div class="sectionHeader"><h4>Attack Damage</h4></div>
                 <mat-form-field appearance="legacy" class="attackDamage">
-                    <mat-label>Quantity</mat-label>
+                    <mat-label>Damage Di(c)e Quantity</mat-label>
                     <input matInput required [(ngModel)]="attackDiceQuantity" [value]="attackDiceQuantity" (input)="recalculateValues()"
                         required>
                 </mat-form-field>
@@ -32,10 +31,9 @@
             </div>
         </div>
     </mat-grid-tile>
-    <mat-divider [vertical]="true" style="height: 100px;"></mat-divider>
     <mat-grid-tile>
         <div class="enemyStats">
-            <h1 class="mat-primary">Enemy Stats</h1>
+            <h1 class="sectionHeader">Enemy Stats</h1>
             <div>
                 <mat-form-field appearance="legacy" class="dprValue">
                     <mat-label>Armor Class</mat-label>
