--- a/src/app/dprcalc/dprcalc.component.html
+++ b/src/app/dprcalc/dprcalc.component.html
@@ -8,11 +8,11 @@
                     <input matInput required [(ngModel)]="attackBonus" [value]="attackBonus" (input)="recalculateValues()" required>
                 </mat-form-field>
                 <mat-button-toggle-group [(ngModel)]="polarity">
-                    <mat-button-toggle [value]="1">
-                        <mat-icon (click)="recalculateValues()">add</mat-icon>
+                    <mat-button-toggle (change)="recalculateValues()" [value]="1">
+                        <mat-icon>add</mat-icon>
                     </mat-button-toggle>
-                    <mat-button-toggle [value]="-1">
-                        <mat-icon (click)="recalculateValues()">remove</mat-icon>
+                    <mat-button-toggle (change)="recalculateValues()" [value]="-1">
+                        <mat-icon>remove</mat-icon>
                     </mat-button-toggle>
                 </mat-button-toggle-group>
                 <mat-form-field appearance="legacy" class="attackDamage">
@@ -22,7 +22,7 @@
                 </mat-form-field>
                 <mat-form-field appearance="fill" class="attackDamage">
                     <mat-label>Die</mat-label>
-                    <mat-select [(ngModel)]="attackDamage">
+                    <mat-select (selectionChange)="recalculateValues()" [(ngModel)]="attackDamage">
                         <mat-option *ngFor="let die of dice" [value]="die.substring(1)">
                             {{die}}
                         </mat-option>
