--- a/src/app/dpr-toolbar/dpr-toolbar.component.html
+++ b/src/app/dpr-toolbar/dpr-toolbar.component.html
@@ -1,12 +1,11 @@
 <mat-toolbar class="mat-primary">
-  <button mat-icon-button>
-    <mat-icon>games</mat-icon>
-  </button>
-  <span>Party 2 Strong?</span>
+  <mat-icon 
+      style="height: 80%; width:auto" 
+      svgIcon="d20morclass"></mat-icon>
   <span class="toolbar-spacer"></span>
-    <mat-icon
-        (click)="redirectToGithub()"
-        svgIcon="github-icon" 
-        aria-hidden="false" 
-        aria-label="Example thumbs up SVG icon"></mat-icon>
+
+  <mat-icon
+      (click)="redirectToGithub()"
+      svgIcon="github-icon" 
+      aria-hidden="false"></mat-icon>
 </mat-toolbar>
