Updated and Applied prettier
Also updated email for noreply

--- a/src/app/dpr-toolbar/dpr-toolbar.component.html
+++ b/src/app/dpr-toolbar/dpr-toolbar.component.html
@@ -1,11 +1,10 @@
 <mat-toolbar class="mat-primary">
-  <mat-icon 
-      style="height: 80%; width:auto" 
-      svgIcon="d20morclass"></mat-icon>
+  <mat-icon style="height: 80%; width: auto" svgIcon="d20morclass"></mat-icon>
   <span class="toolbar-spacer"></span>
 
   <mat-icon
-      (click)="redirectToGithub()"
-      svgIcon="github-icon" 
-      aria-hidden="false"></mat-icon>
+    (click)="redirectToGithub()"
+    svgIcon="github-icon"
+    aria-hidden="false"
+  ></mat-icon>
 </mat-toolbar>
