--- a/src/app/dpr-toolbar/dpr-toolbar.component.scss
+++ b/src/app/dpr-toolbar/dpr-toolbar.component.scss
@@ -1,8 +1,8 @@
-@import '../theme.scss';
+@import "../theme.scss";
 
 .toolbar-spacer {
   flex: 1 1 auto;
 }
 mat-icon {
-    cursor: pointer;
+  cursor: pointer;
 }
