--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -1,5 +1,5 @@
-@import '~@angular/material/theming';
-@import '../styles';
+@import "~@angular/material/theming";
+@import "../styles";
 
 @include mat-core();
 
