--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 
 // Define a custom mixin that takes in the current theme
 @mixin theme-color-grabber($theme) {
