Added Advantage Variable

--- a/src/app/dprcalc/dprcalc.component.html
+++ b/src/app/dprcalc/dprcalc.component.html
@@ -76,6 +76,7 @@
         <p *ngIf="debug">Polarity: {{ polarity }}</p>
         <p *ngIf="debug">Enemy Armor Class: {{ enemyArmorClass }}</p>
         <p *ngIf="debug">Average Attack Die Roll: {{ averageDieRoll }}</p>
+        <p *ngIf="debug">Advantage: {{ advantageStatus }}</p>
         <p>Chance to Hit: {{ chanceToHit }}</p>
         <p>Average Damage Per Round: {{ averageDamagePerRound }}</p>
       </div>
