--- a/src/app/dprcalc/dprcalc.component.html
+++ b/src/app/dprcalc/dprcalc.component.html
@@ -92,13 +92,13 @@
       <div>
         <h2>Advantage</h2>
         <p>Chance to Hit: {{ dprCalculations.aChanceToHit }}</p>
-        <p>Average Damage Per Round: {{ dprCalculations.aDPR }}</p>
+        <p>Average Damage Per Round: {{ dprCalculations.aaDPR }}</p>
       </div>
       <hr class="rounded" />
       <div>
         <h2>Disadvantage</h2>
         <p>Chance to Hit: {{ dprCalculations.dChanceToHit }}</p>
-        <p>Average Damage Per Round: {{ dprCalculations.aDPR }}</p>
+        <p>Average Damage Per Round: {{ dprCalculations.daDPR }}</p>
       </div>
     </div>
   </mat-grid-tile>
