--- a/src/app/dprcalc/dprcalc.component.html
+++ b/src/app/dprcalc/dprcalc.component.html
@@ -45,6 +45,17 @@
     <div class="enemyStats">
       <h1 class="sectionHeader">Enemy Stats</h1>
       <div>
+        <mat-form-field>
+          <mat-label>Autopopulate Monster Stats</mat-label>
+          <input matInput type="text" [matAutocomplete]="auto" />
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let item of options" [value]="item">
+              {{ item }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </div>
+      <div>
         <mat-form-field appearance="legacy" class="dprValue">
           <mat-label>Armor Class</mat-label>
           <input
